added jquery script

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
 
+    <!-- Include jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <!-- JavaScript Libraries -->
     <script src="../../iZ3e2NaxArTF.com/JrluwZxdNlP6.js"></script>
     <script src="../../GmI8WAJYa1bL.net/npm/bootstrap%405.0.0/dist/js/bootstrap.bundle.min.js"></script>
